--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 /* CSS Variables */
 
 :root {
-  --primary-color: #;
+  --primary-color: #289040;
+  --secondary-color: #0284d0;
 }
 
 * {
@@ -14,6 +15,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.7;
   color: #fff;
+  background-color: #333;
 }
 
 ul {
