--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ img {
   align-items: center;
   justify-content: space-between;
   background-color: #333;
-  color: #000;
+  color: #fff;
   opacity: 0.8;
   width: 100%;
   height: 70px;
@@ -68,4 +68,47 @@ img {
 
 .navbar .logo {
   font-weight: 400;
+}
+
+/* Header */
+
+.hero {
+  background: url('../img/home/showcase.jpg') no-repeat center center/cover;
+  height: 100vh;
+  position: relative;
+  color: #fff;
+}
+
+.hero .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.hero .content h1 {
+  font-size: 55px;
+}
+
+.hero .content p {
+  font-size: 23px;
+  max-width: 600px;
+  margin: 20px 0 30px;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.hero .content > * {
+  z-index: 10;
 }
