add icons section

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -43,3 +43,17 @@
   background-color: #f4f4f4;
   color: #333;
 }
+
+/* Flex Items */
+
+.flex-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+
+.flex-items > div {
+  padding: 20px;
+}
