add blog section

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -53,6 +53,26 @@
   border: 1px solid #fff;
 }
 
+/* Section Header */
+
+.section-header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.section-header h2 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.section-padding {
+  padding: 20px 20px 40px;
+}
+
 /* Flex Items */
 
 .flex-items {
@@ -73,6 +93,10 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+
+.flex-columns.flex-reverse .row {
+  flex-direction: row-reverse;
 }
 
 .flex-columns .column {
@@ -112,4 +136,18 @@
 
 .flex-columns p {
   margin: 20px 0;
+}
+
+/* Flex Grid */
+
+.flex-grid .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.flex-grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
 }
