add contact section and footer

--- a/css/main.css
+++ b/css/main.css
@@ -137,3 +137,60 @@ img {
 .cases img:hover {
   opacity: 0.7;
 }
+
+/* Team */
+
+.team img {
+  border-radius: 50%;
+}
+
+/* Callback form */
+
+.callback-form {
+  width: 100%;
+  padding: 20px 0;
+}
+
+.callback-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.callback-form .form-control {
+  margin-bottom: 20px;
+}
+
+.callback-form .form-control input,
+.callback-form .form-control textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.callback-form input:focus {
+  outline-color: #28a745;
+}
+
+/* Footer */
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 150px;
+}
+
+.footer a {
+  color: #fff;
+}
+
+.footer a:hover {
+  color: #28a745;
+}
+
+.footer .social > * {
+  margin-right: 10px;
+}
