--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,11 @@ img {
   z-index: 10;
 }
 
+.hero.blog {
+  background: url('../img/home/blog.jpg') no-repeat center center/cover;
+  height: 30vh;
+}
+
 /* About: Icons */
 
 .icons {
